--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.8'
+version: '3.4'
 
 services:
   web:
     build: ./services/odmf
-    command: python3 /srv/start-odmf.py
     env_file:
       - .env
     volumes:
@@ -13,6 +12,8 @@ services:
     depends_on:
       - db
     restart: unless-stopped
+    working_dir: /srv/odmf
+    command: python3 /srv/start-odmf.py
   db:
     image: postgres:13
     volumes:
