--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.4'
 
 services:
   web:
@@ -22,6 +22,17 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD:-db_passw}
       - POSTGRES_DB=${DB_NAME:-odmf}
     restart: unless-stopped
+  db_backup:
+    build: ./services/backup
+    environment:
+      - BACKUP_TARGET=
+      - DB_URL=postgresql://$DB_USER:$DB_PASSWORD@db:5432/$DB_NAME
+      - BACKUP_ZIP=gzip
+    volumes:
+      - ./backup/:/var/backup/
+    depends_on:
+      - db
+    tty: true
 volumes:
   postgres_data:
 
