--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 SOURCE_REPO_URL=jlu-ilr-hydro/odmf
 SOURCE_BRANCH=develop
 
+ODMF_NAME=test
 ODMF_PORT=8081
 ODMF_DATETIME_DEFAULT_TIMEZONE=Europe/Berlin
 ODMF_ROOT_URL=/test
