Using prebuilt image in docker-compose, image uses PyPi

--- a/.env-template
+++ b/.env-template
@@ -1,6 +1,4 @@
-SOURCE_REPO_URL=jlu-ilr-hydro/odmf
-SOURCE_BRANCH=develop
-SOURCE_VERSION=2022.5.30
+SOURCE=odmf
 
 ODMF_NAME=test
 ODMF_PORT=8081
@@ -8,7 +6,7 @@ ODMF_DEFAULT_TIMEZONE=Europe/Berlin
 ODMF_ROOT_URL=/test
 ODMF_ADMIN_PW=test
 
-DB_TYPE=postgres
+DB_TYPE=postgresql
 DB_USER=db_user
 DB_PASSWORD=db_pw
 DB_NAME=odmf
