--- a/services/odmf/Dockerfile
+++ b/services/odmf/Dockerfile
@@ -8,48 +8,34 @@
 #   - ./app/:/srv/odmf
 #   - ./backup/:/var/backup
 
-FROM python:3.9 AS base
+FROM python:3.10 AS base
 MAINTAINER "Philipp Kraft"
-LABEL version="2022.02.23"
+LABEL version="2022.10.06"
 
-RUN  apt-get update && \
+RUN  apt-get update && apt-get install -y --no-install-recommends apt-utils && \
      apt-get install -y postgresql-client && \
      apt-get install -y cron rsyslog gzip bzip2 nano git
 
 # Disable kernel logs in syslog
 RUN sed 's/module(load="imklog")/#module(load="imklog")/' -i /etc/rsyslog.conf
 
-ARG SOURCE_VERSION
-ARG SOURCE_REPO_URL
-ARG SOURCE_BRANCH
-ARG SOURCE_ZIP_URL=https://github.com/$SOURCE_REPO_URL/archive/$SOURCE_BRANCH.zip
-ARG PIP=/usr/local/bin/pip
+ARG PIP=/usr/local/bin/pip3
+ARG SOURCE=odmf
 
 ENV ODMF_PORT=8081
 ENV ODMF_DEFAULT_TIMEZONE=Europe/Berlin
 ENV ODMF_ROOT_URL=/test
 ENV ODMF_ADMIN_PW=test
-
 ENV DB_URL=$DB_URL
 
-RUN $PIP install --upgrade pip setuptools wheel
+RUN pip3 install --upgrade pip setuptools wheel
 
 # Setup backup, mount /var/backup
 COPY ./*.sh /
 RUN chmod u+x /*.sh
 COPY ./crontab /crontab
-RUN echo "$DB_URL" > /db_url
 WORKDIR /srv/odmf
 
-FROM base as dev
-ENV TARGET=dev
-ENV SOURCE_BRANCH=$SOURCE_BRANCH
-ENV SOURCE_REPO_URL=$SOURCE_REPO_URL
-ENV PIP=$PIP
-ENTRYPOINT ["/startup-dev.sh"]
-
-FROM base as prod
-# Fastest way to install from github
-RUN $PIP install $SOURCE_ZIP_URL
+RUN pip3 install $SOURCE
 ENV TARGET=prod
 ENTRYPOINT ["/startup-prod.sh"]
