DB pushed to own Image including tools. Removed backup-cron jobs from web service

--- a/services/odmf/Dockerfile
+++ b/services/odmf/Dockerfile
@@ -1,23 +1,21 @@
 # The docker file for ODMF
 
-# Using the official python:3.9 package, to play it safe
+# Using the official python:3.10 package, to play it safe
 # Alpine and slim do not offer support for git or manylinux binaries
 # See https://pythonspeed.com/articles/alpine-docker-python/
 
 # volumes:
 #   - ./app/:/srv/odmf
-#   - ./backup/:/var/backup
 
 FROM python:3.10 AS base
 MAINTAINER "Philipp Kraft"
-LABEL version="2022.10.06"
+LABEL version="2022.10.21"
 
 RUN  apt-get update && apt-get install -y --no-install-recommends apt-utils && \
-     apt-get install -y postgresql-client && \
-     apt-get install -y cron rsyslog gzip bzip2 nano git
+     apt-get install -y gzip nano git
 
 # Disable kernel logs in syslog
-RUN sed 's/module(load="imklog")/#module(load="imklog")/' -i /etc/rsyslog.conf
+# RUN sed 's/module(load="imklog")/#module(load="imklog")/' -i /etc/rsyslog.conf
 
 ARG PIP=/usr/local/bin/pip3
 ARG SOURCE=odmf
@@ -33,9 +31,9 @@ RUN pip3 install --upgrade pip setuptools wheel
 # Setup backup, mount /var/backup
 COPY ./*.sh /
 RUN chmod u+x /*.sh
-COPY ./crontab /crontab
 WORKDIR /srv/odmf
 
 RUN pip3 install $SOURCE
+RUN echo 'eval "$(_ODMF_COMPLETE=bash_source odmf)"' >> ~/.bashrc
 ENV TARGET=prod
 ENTRYPOINT ["/startup-prod.sh"]
