--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     working_dir: /srv/odmf
   db:
-    image: odmf-db:latest
+    image: odmf-db:2023-01-19
     volumes:
       - postgres_data:/var/lib/postgresql/data/
       - ./backup_pg/:/var/backup/
