Image build from odmf source and tagged from branch, eg master

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   web:
-    image: odmf:latest
+    image: odmf:master
     environment:
       - DB_URL=$DB_TYPE://$DB_USER:$DB_PASSWORD@db:5432/$DB_NAME
       - ODMF_ADMIN_PW
@@ -20,7 +20,7 @@ services:
     restart: unless-stopped
     working_dir: /srv/odmf
   db:
-    image: odmf-db:2023-01-19
+    image: odmf-db:master
     volumes:
       - postgres_data:/var/lib/postgresql/data/
       - ./backup_pg/:/var/backup/
