--- a/services/odmf-client/Dockerfile
+++ b/services/odmf-client/Dockerfile
@@ -16,23 +16,13 @@ RUN  apt-get update && apt-get install -y --no-install-recommends apt-utils && \
 ENV PIP_ROOT_USER_ACTION=ignore
 ARG PIP_ROOT_USER_ACTION=ignore
 ARG PIP=/usr/local/bin/pip3
-ARG SOURCE=/var/source/
-RUN mkdir -p /var/source/
-COPY src/ /var/source/
-ENV ODMF_PORT=8081
-ENV ODMF_DEFAULT_TIMEZONE=Europe/Berlin
-ENV ODMF_ROOT_URL=/test
-ENV ODMF_ADMIN_PW=test
-ENV DB_URL=$DB_URL
+
+ENV ODMF_URL=$ODMF_URL
+ENV ODMF_USER=$ODMF_USER
+ENV ODMF_PASSWD=$ODMF_PASSWD
 
 RUN python3 -m pip install --upgrade pip setuptools wheel
+WORKDIR /app
+RUN --mount=type=cache,target=/root/.cache pip3 install odmfclient --upgrade
 
-# Setup backup, mount /var/backup
-COPY ./*.sh /
-RUN chmod u+x /*.sh
-WORKDIR /srv/odmf
-RUN --mount=type=cache,target=/root/.cache pip3 install  psycopg2-binary --upgrade
-RUN --mount=type=cache,target=/root/.cache pip3 install $SOURCE --upgrade
-RUN echo 'eval "$(_ODMF_COMPLETE=bash_source odmf)"' >> ~/.bashrc
-ENV TARGET=prod
-ENTRYPOINT ["/startup-prod.sh"]
+
